fix: resolve all backend compilation errors - unify packages to ru.lifegame.backend